kubernetes/chat/chat-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-db
  labels:
    app: chat
    tier: db
spec:
  selector:
    matchLabels:
      app: chat
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chat
        tier: db
    spec:
      containers:
      - image: localhost:5000/chat-db:latest
        name: chat-db
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: chat-db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: chat-db-persistent-storage
        persistentVolumeClaim:
          claimName: chat-db-pvc
