kubernetes/chat/chat-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
      - name: nginx
        image: localhost:5000/chat-frontend:latest
        ports:
        - containerPort: 80
