kubernetes/chat/chat-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  namespace: default
spec:
  selector:
    app: chat-backend
  ports:
  - port: 88
    targetPort: 8080
  type: ClusterIP
