kubernetes/chat/chat-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  namespace: default
spec:
  selector:
    app: chat-frontend
  ports:
  - port: 90
    targetPort: 80
  type: ClusterIP
